Display languages in myprofile

--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -87,17 +87,19 @@
 <div style="...; border:5px solid black; align: 'center'; height: 150px;margin: 0 100px;">
     <div class = "bio">
         <h3>Biography</h3>
-        <p><%= bio %></p>
+        <p style="text-align: center"><%= bio %></p>
     </div>
 </div>
 <div style="...; border:5px solid black; align: 'center'; float: left; height: 150px;width: 500px;margin: 20px 100px;">
     <div class = "boxOne">
         <h4>Languages Spoken</h4>
+        <p style="text-align: center"><%= langExp %></p>
     </div>
 </div>
 <div style="...; border:5px solid black; align: 'center'; float: right; height: 150px;width: 500px;margin: 20px 100px;">
     <div class = "boxTwo">
         <h4>Languages to be Learned</h4>
+        <p style="text-align: center"><%= langLearn %></p>
     </div>
 </div>
 </body>
