hard coded user props

--- a/views/otherprofile.html
+++ b/views/otherprofile.html
@@ -70,8 +70,8 @@
 <div style = "text-align: center">
     <img src = "../Picture/profilephoto.png" height = "200px" width = "200px" alt = "Profile Photo">
 </div>
-<h3 id="fullname" style="text-align: center"></h3>
-<h4 id="head_username" style="text-align: center; text-size: 31px; border-color: Blue"></h4>
+<h3 id="fullname" style="text-align: center"><%= firstName %> <%= lastName %></h3>
+<h4 id="head_username" style="text-align: center; text-size: 31px; border-color: Blue"><%= username %></h4>
 <script src="javascripts/otherprofile.js"></script>
 <div style="text-align: center;">
     <div>
@@ -81,17 +81,19 @@
     <div style="...; border:5px solid black; align: 'center'; height: 150px;margin: 0 100px;">
         <div class = "bio">
             <h3>Biography</h3>
-            <p></p>
+            <p style="text-align: center"><%= bio %></p>
         </div>
     </div>
     <div style="...; border:5px solid black; align: 'center'; float: left; height: 150px;width: 500px;margin: 20px 100px;">
         <div class = "boxOne">
             <h4>Languages Spoken</h4>
+            <p style="text-align: center"><%= langExp %> </p>
         </div>
     </div>
     <div style="...; border:5px solid black; align: 'center'; float: right; height: 150px;width: 500px;margin: 20px 100px;">
         <div class = "boxTwo">
             <h4>Languages to be Learned</h4>
+            <p style="text-align: center"><%= langLearn %></p>
         </div>
     </div>
 </div>
