--- a/views/homepage.html
+++ b/views/homepage.html
@@ -56,13 +56,13 @@
         </ul>
     </div>
 </nav>
-<h1 style="text-align: center; text-size: 31px; border-color: Blue"><%= username %></h1>
-<h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>
+<h1 style="text-align: center; text-size: 31px; border-color: Blue; display: none"><%= username %></h1>
+<!--<h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>-->
 <div style = "text-align: center">
-    <img src = "../Picture/LingoJiveLogo.png" height = "300px" width = "300px">
+    <img src = "../Picture/LingoJiveLogo.png" height = "400px" width = "400px">
 </div>
 
-<p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>
+<!--<p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>-->
 
 </body>
 </html>
