--- a/views/viewfriends.html
+++ b/views/viewfriends.html
@@ -7,6 +7,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script>
+        const username = '<%= username %>';
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -71,10 +74,14 @@
 <div class="container">
 
 </div>
+<h1 style="text-align: center"><%= username %>'s Friends</h1>
+<div style="text-align: center">
+    <button onclick="window.location.href='/myprofile'" class="btn-danger btn-lg" id="btnback">Back</button>
+    <button class="btn-success btn-lg" id="btnViewFriends">View Friends</button>
+</div>
+
 <div style="padding-top: 10px" class="container">
     <div class="jumbotron" id="output" style="text-align: center">
-        <button onclick="window.location.href='/myprofile'" class="btn-danger btn-lg" id="btnback">Back</button>
-        <button class="btn-success btn-lg" id="btnViewFriends">View Friends</button>
     </div>
 </div>
 <script src="javascripts/viewfriends.js"></script>
