get rid of now unnecessary form

--- a/views/chats.html
+++ b/views/chats.html
@@ -65,11 +65,11 @@
     <div class="row chatrow">
         <div class="col-6 chatcol">
             <ul id="chatList" class="listgroup"></ul>
-            <form method="post" id="form2">
-                <label for="recipient" id="chatName">Compose: </label>
-                <input type="text" id="recipient" placeholder="recipient">
-                <input class="btn btn-primary" type="submit" value="Submit">
-            </form>
+<!--            <form method="post" id="form2">-->
+<!--                <label for="recipient" id="chatName">Compose: </label>-->
+<!--                <input type="text" id="recipient" placeholder="recipient">-->
+<!--                <input class="btn btn-primary" type="submit" value="Submit">-->
+<!--            </form>-->
         </div>
         <div class="col-6 chatcol2">
             <div class="col-12 chatcol3" id="messageScroll">
