shows how manyunread messages you have, doesn't allow you to lower the number by opening them

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -14,3 +14,15 @@ btn-primary{
 h1{
     margin-top: 20px;
 }
+
+#button_badge {
+    background-color: #fa3e3e;
+    border-radius: 2px;
+    color: white;
+
+    padding: 1px 3px;
+    font-size: 13px;
+    position: absolute;
+    top: 15px;
+    left: 200px;
+}
