--- a/public/stylesheets/messenger.css
+++ b/public/stylesheets/messenger.css
@@ -213,3 +213,15 @@ body {
     font-size: 10px;
     font-style: italic;
 }
+
+#button_badge {
+    background-color: #fa3e3e;
+    border-radius: 2px;
+    color: white;
+
+    padding: 1px 3px;
+    font-size: 13px;
+    position: absolute;
+    top: 15px;
+    left: 200px;
+}
