--- a/public/stylesheets/otherprofile.css
+++ b/public/stylesheets/otherprofile.css
@@ -12,3 +12,15 @@
     align-content: center;
     background: white;
 }
+
+#button_badge {
+    background-color: #fa3e3e;
+    border-radius: 2px;
+    color: white;
+
+    padding: 1px 3px;
+    font-size: 13px;
+    position: absolute;
+    top: 15px;
+    left: 200px;
+}
