Rename files and buttons

--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -82,7 +82,7 @@
 </div>
 <div style="text-align: center;">
     <button onclick="window.location.href='/viewblocked'"; class="btn-danger" id="btnBlockUser">View Blocked</button>
-    <button onclick="window.location.href='/viewfriends'"; class="btn-success" id="btnAddFriend">View Friends</button>
+    <button onclick="window.location.href='/viewfollowing'"; class="btn-success" id="btnAddFollow">View Following</button>
 </div>
 <div style="...; border:5px solid black; align: 'center'; height: 150px;margin: 0 100px;">
     <div class = "bio">
