--- a/views/viewfollowing.html
+++ b/views/viewfollowing.html
@@ -77,13 +77,13 @@
 <h1 style="text-align: center"><%= username %>'s Friends</h1>
 <div style="text-align: center">
     <button onclick="window.location.href='/myprofile'" class="btn-danger btn-lg" id="btnback">Back</button>
-    <button class="btn-success btn-lg" id="btnViewFriends">View Friends</button>
+    <button class="btn-success btn-lg" id="btnViewFriends">View Following</button>
 </div>
 
 <div style="padding-top: 10px" class="container">
     <div class="jumbotron" id="output" style="text-align: center">
     </div>
 </div>
-<script src="javascripts/viewfriends.js"></script>
+<script src="javascripts/viewfollowing.js"></script>
 </body>
 </html>
