--- a/views/homepage.html
+++ b/views/homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LingoJive</title>
+    <title >LingoJive</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -12,12 +12,13 @@
     </script>
     <link rel="stylesheet" href="./stylesheets/homepage.css">
 </head>
-<body>
+<body style="background-color: #c48843">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">LingoJive</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="nav-link" href="/">
+        <div class="logo-image">
+            <img src="../Picture/LingoJiveLogo.png" class="img-fluid" width="80px" height="80px">
+        </div>
+    </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -64,11 +65,37 @@
 </nav>
 <h1 style="text-align: center; text-size: 31px; border-color: Blue; display: none"><%= username %></h1>
 <!--<h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>-->
-<div style = "text-align: center">
-    <img src = "../Picture/LingoJiveLogo.png" height = "400px" width = "400px">
+<div style = "display: block; text-align: left">
+    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="left" height="300" src="../Picture/multiplelanguages.jpeg" border="0"></a>
 </div>
 
+<h1 style="text-align: center; background-color: white; color: darkslateblue; height: 300px">Lingo Jive</h1>
 <!--<p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>-->
 <script src="/javascripts/homepage.js"></script>
+<div style="border: 5px black">
+    <h1 style="text-align: center; color: darkslateblue;"> A Language Exchange Application</h1>
+<h5 style="text-align: center">Here you can chat, communicate, and have a good time with your international friends for the first time</h5>
+</div>
+<div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: left; height: 120px;width: 500px;margin: 20px 100px;">
+    <h3 style="text-align: center; color: darkslateblue;">Connect Internationally</h3>
+    <h5 style="text-align: center"> something something</h5></div>
+</div>
+
+<div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: right; height: 120px;width: 500px;margin: 20px 100px;">
+        <h3 style="text-align: center; color: darkslateblue;">Messaging, Audio, & Video Chat</h3>
+        <h5 style="text-align: center"> something something</h5>
+    </div>
+</div>
+<div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: left; height: 120px;width: 500px;margin: 20px 100px;">
+    <h3 style="text-align: center; color: darkslateblue;">Posting Feeds</h3>
+    <h5 style="text-align: center"> something something</h5></div>
+</div>
+
+<div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: right; height: 120px;width: 500px;margin: 20px 100px;">
+    <h3 style="text-align: center; color: darkslateblue;">Timed Language Switches</h3>
+    <h5 style="text-align: center"> something something</h5>
+</div>
+</div>
+</div>
 </body>
 </html>
