--- a/views/chats.html
+++ b/views/chats.html
@@ -14,6 +14,8 @@
 <script>
     const roomId = '<%= roomId %>';
     const targetName = '<%= targetName %>';
+    const blocking = '<%= blocking %>';
+    const blockedBy = '<%= blockedBy %>';
 </script>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LingoJive</a>
