minor changes towards expanding blocklist

--- a/views/otherprofile.html
+++ b/views/otherprofile.html
@@ -67,6 +67,7 @@
 <div style="text-align: center;">
     <div>
         <button class="btn-danger" id="btnBlockUser" onclick="">Block</button>
+        <button class="btn-danger" id="btnUnblockUser" onclick="">Unblock</button>
         <button class="btn-success" id="btnAddFollow">Follow</button>
         <button class="btn-primary" id="messageButton">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
