autofill off for chat form

--- a/views/chats.html
+++ b/views/chats.html
@@ -80,7 +80,7 @@
             <form method="post" id="form">
                 <div class="input-group">
                     <label for="chatMsg" id="username"><%= username %></label>
-                    <input type="text" id="chatMsg" class="form-control">
+                    <input type="text" id="chatMsg" class="form-control" autocomplete="off">
                     <div class="input-group-append">
                         <input class="btn btn-primary" type="submit" value="Submit">
                     </div>
