--- a/public/stylesheets/editprofile.css
+++ b/public/stylesheets/editprofile.css
@@ -2,7 +2,8 @@
     background-color: #fa3e3e;
     border-radius: 2px;
     color: white;
-
+    display: none;
+    
     padding: 1px 3px;
     font-size: 13px;
     position: absolute;
