--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -2,6 +2,7 @@
     background-color: #fa3e3e;
     border-radius: 2px;
     color: white;
+    display: none;
 
     padding: 1px 3px;
     font-size: 13px;
