--- a/public/stylesheets/posts.css
+++ b/public/stylesheets/posts.css
@@ -47,7 +47,8 @@ nav{position: fixed;
     background-color: #fa3e3e;
     border-radius: 2px;
     color: white;
-
+    display: none;
+    
     padding: 1px 3px;
     font-size: 13px;
     position: absolute;
