Added username to navbar in homepage

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -10,3 +10,9 @@
     top: 15px;
     left: 210px;
 }
+
+.navbar-nav.navbar-center {
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+}
