--- a/views/homepage.html
+++ b/views/homepage.html
@@ -69,8 +69,8 @@
 <!--<h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>-->
 <h1 style="text-align: center; text-size: 31px; border-color: Blue; display: none"><%=username%></h1>
 <div style = "display: block">
-    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="left" height="300" src="../Picture/multiplelanguages.jpeg" border="0"></a>
-    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="right" height="300" src="../Picture/multiplelanguages.jpeg" border="0"></a>
+    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="left" height="300" src="../Picture/multiplelanguages.jpeg" border="0" style="opacity: 0.75;"></a>
+    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="right" height="300" src="../Picture/multiplelanguages.jpeg" border="0" style="opacity: 0.75;"></a>
 </div>
 <h1 style="text-align: center; background-color: white; color: darkslateblue; height: 300px">LingoJive</h1>
 <!--<p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>-->
