Small bug fix, update homepage

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -80,22 +80,22 @@
 </div>
 <div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: left; height: 120px;width: 500px;margin: 20px 100px;">
     <h3 style="text-align: center; color: darkslateblue;">Connect Internationally</h3>
-    <h5 style="text-align: center"> something something</h5></div>
+    <h5 style="text-align: center">Meet new people from different countries through language!</h5></div>
 </div>
 
 <div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: right; height: 120px;width: 500px;margin: 20px 100px;">
         <h3 style="text-align: center; color: darkslateblue;">Messaging, Audio, & Video Chat</h3>
-        <h5 style="text-align: center"> something something</h5>
+        <h5 style="text-align: center">Connect with other users with these methods!</h5>
     </div>
 </div>
 <div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: left; height: 120px;width: 500px;margin: 20px 100px;">
     <h3 style="text-align: center; color: darkslateblue;">Posting Feeds</h3>
-    <h5 style="text-align: center"> something something</h5></div>
+    <h5 style="text-align: center">Post a public comment or question to the community!</h5></div>
 </div>
 
 <div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: right; height: 120px;width: 500px;margin: 20px 100px;">
     <h3 style="text-align: center; color: darkslateblue;">Timed Language Switches</h3>
-    <h5 style="text-align: center"> something something</h5>
+    <h5 style="text-align: center">Switch languages spoken with another user after a period of time!</h5>
 </div>
 </div>
 </div>
