--- a/views/viewfollowing.html
+++ b/views/viewfollowing.html
@@ -18,6 +18,9 @@
             <img src="../Picture/LingoJiveLogo.png" class="img-fluid" width="80px" height="80px">
         </div>
     </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarTogglerDemo01" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <!--            <li class="nav-item dropdown">-->
