Can retrieve profile pic from other profiles, formatting

--- a/views/otherprofile.html
+++ b/views/otherprofile.html
@@ -64,8 +64,8 @@
         </ul>
     </div>
 </nav>
-<div style = "text-align: center">
-    <img src = "../Picture/profilephoto.png" height = "200px" width = "200px" alt = "Profile Photo">
+<div style = "text-align: center; padding-top: 20px">
+    <img src = "../Picture/profilephoto.png" id = "photo" height = "200px" width = "200px"  alt = "Profile Photo">
 </div>
 <h3 id="fullname" style="text-align: center"><%= firstName %> <%= lastName %></h3>
 <div style="text-align: center;">
