--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -110,6 +110,13 @@
         <input type="text" name="bio" id="bio" class="form-control"
                placeholder="Enter your biography...">
     </div>
+    <div class="form-group">
+        <form method="POST" action="/profilepics" enctype="multipart/form-data">
+            <label for="profilePic">Upload Profile Photo:</label>
+            <input type="file" name="profilePic" id="profilePic" class="form-control">
+            <input type="submit">
+        </form>
+    </div>
     <div class="form-group" style="float: left">
         <label>Native Languages</label>
         <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true" id="langExp">
