--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -68,8 +68,8 @@
     </div>
 </nav>
 
-<div style = "text-align: center">
-    <img src = "../Picture/profilephoto.png" height = "200px" width = "200px" alt = "Profile Photo">
+<div style = "text-align: center; padding-top: 20px" >
+    <img src = "../Picture/profilephoto.png" id="photo" height = "200px" width = "200px" alt = "Profile Photo">
 </div>
 <h3 id="fullname" style="text-align: center"><%=firstname%> <%=lastname%></h3>
 <h4 id="head_username" style="text-align: center; text-size: 31px; border-color: Blue"><%= username %></h4>
