--- a/views/room.html
+++ b/views/room.html
@@ -50,6 +50,9 @@
             background: white;
         }
     </style>
+    <script>
+        myusername = '<%= myusername %>'
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -113,7 +116,55 @@
 </nav>
 <div id="video-grid"></div>
 <button id="hangUpButton">End Call</button>
-<div class="container rateUser">Rate User!</div>
+<div class="container rateUser">
+    Rate User!
+<!--    overallFluency: [Number],-->
+<!--    pronunciation: [Number],-->
+<!--    conversationalAbility: [Number],-->
+<!--    listening: [Number],-->
+<!--    speaking: [Number]-->
+    <label for="overallFluency">Overall Fluency</label>
+    <select name="overallFluency" id="overallFluency">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+    <label for="pronunciation">Pronunciation</label>
+    <select name="pronunciation" id="pronunciation">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+    <label for="conversationalAbility">Conversational Ability</label>
+    <select name="conversationalAbility" id="conversationalAbility">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+    <label for="listening">Listening</label>
+    <select name="listening" id="listening">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+    <label for="speaking">Speaking</label>
+    <select name="speaking" id="speaking">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+    <button id="submitRating">Submit</button>
+</div>
 <!--<script src="/socket.io/socket.io.js"></script>-->
 <!--<script src="/javascripts/room.js"></script>-->
 </body>
