--- a/views/room.html
+++ b/views/room.html
@@ -8,6 +8,7 @@
         const ROOM_ID = "<%= roomId %>"
     </script>
     <script defer src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
+<!--    <script defer src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js.map"></script>-->
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="/javascripts/room.js" defer></script>
 
