--- a/views/chats.html
+++ b/views/chats.html
@@ -9,6 +9,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../stylesheets/chats.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 <body>
 <script>
