--- a/views/chats.html
+++ b/views/chats.html
@@ -87,7 +87,7 @@
                     <label for="chatMsg" id="username"><%= username %></label>
                     <input type="text" id="chatMsg" class="form-control" autocomplete="off">
                     <div class="input-group-append">
-                        <input class="btn btn-primary" type="submit" value="Submit">
+                        <button class="btn btn-primary" id="submitPic">Submit photo</button>
                     </div>
                 </div>
             </form>
