--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -111,10 +111,10 @@
                placeholder="Enter your biography...">
     </div>
     <div class="form-group">
-        <form method="POST" action="/profilepics" enctype="multipart/form-data" id="submitPic">
+        <form method="POST" action="/profilepics" enctype="multipart/form-data">
             <label for="profilePic">Upload Profile Photo:</label>
             <input type="file" name="profilePic" id="profilePic" class="form-control">
-            <button id="submitPicBtn">Submit Button</button>
+            <button id="submitPicBtn">Submit</button>
         </form>
     </div>
     <div class="form-group" style="float: left">
