--- a/views/profilepics.html
+++ b/views/profilepics.html
@@ -2,29 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Edit Profile</title>
-    <link rel="stylesheet" href=
-            "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src=
-                    "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    </script>
-    <script src=
-                    "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-    </script>
-    <script src=
-                    "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-    </script>
-
-    <!-- CDN link used below is compatible with this example -->
-    <link rel="stylesheet" href=
-            "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.min.css">
-    <script src=
-                    "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js">
-    </script>
+    <title>Edit Profile Picture</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script>
         var username = '<%= username %>'
     </script>
-    <link rel="stylesheet" href="./stylesheets/editprofile.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -50,9 +35,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                         <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
                     </svg>
+                    <div id="button_badge">
+                    </div>
                 </a>
-                <div id="button_badge">
-                </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/posts">
@@ -62,6 +47,9 @@
                     </svg>
                 </a>
             </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-center">
+            <li style="text-align: center; font-size: 36px; color: #c48843;"><%= username %></li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
@@ -74,83 +62,18 @@
                     <a class="dropdown-item" href="#">Settings & Privacy</a>
                     <a class="dropdown-item" href="#">Support</a>
                     <a class="dropdown-item" href="logout">Sign out</a>
+
                 </div>
             </li>
         </ul>
     </div>
 </nav>
-<h1 style="text-align: center">Edit Profile</h1>
-<div class="container">
-    <h3 style="text-align: center" id="username"><%= username %></h3>
+<div class="form-group">
+    <form method="POST" action="/upload"enctype="multipart/form-data">
+        <label for="profileImage">Upload Profile Photo:</label>
+        <input type="file" name="profileImage" id="profileImage" class="form-control">
+        <input type="submit">Submit</input>
+    </form>
 </div>
-<div class="container">
-    <h5>Fill in new info (blank elements have no effect):</h5>
-    <div class="form-group">
-        <label for="firstname">First Name:</label>
-        <input type="text" name="firstname" id="firstname" class="form-control"
-               placeholder="firstname">
-    </div>
-    <div class="form-group">
-        <label for="lastname">Last Name:</label>
-        <input type="text" name="lastname" id="lastname" class="form-control"
-               placeholder="lastname">
-    </div>
-    <div class="form-group">
-        <label for="password">New Password:</label>
-        <input type="password" name="password" id="password" class="form-control"
-               placeholder="password">
-    </div>
-    <div class="form-group">
-        <label for="confirm_password">Confirm New Password:</label>
-        <input type="password" name="confirm_password" id="confirm_password" class="form-control"
-               placeholder="confirm password">
-    </div>
-    <div class="form-group">
-        <label for="bio">Biography:</label>
-        <input type="text" name="bio" id="bio" class="form-control"
-               placeholder="Enter your biography...">
-    </div>
-    <div class="form-group; text-center">
-        <button id="submitPicBtn">Edit Profile Picture</button>
-    </div>
-    <div class="form-group" style="float: left">
-        <label>Native Languages</label>
-        <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true" id="langExp">
-            <select class="selectpicker" multiple title="Select all that apply...">
-                <option>English</option>
-                <option>Spanish</option>
-                <option>French</option>
-                <option>German</option>
-                <option>Hindi</option>
-                <option>Italian</option>
-                <option>Dutch</option>
-                <option>Mandarin</option>
-            </select>
-        </div>
-    </div>
-    <div class="form-group" style="float: right">
-        <label>Practicing Languages</label>
-        <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true" id="langLearn">
-            <select class="selectpicker" multiple title="Select all that apply...">
-                <option>English</option>
-                <option>Spanish</option>
-                <option>French</option>
-                <option>German</option>
-                <option>Hindi</option>
-                <option>Italian</option>
-                <option>Dutch</option>
-                <option>Mandarin</option>
-            </select>
-        </div>
-    </div>
-    <div class="jumbotron" id="output2" style="clear: both">
-
-    </div>
-    <div class="text-center">
-        <button class="btn-danger btn-lg" id="btnDiscardChanges">Discard Changes</button>
-        <button class="btn-warning btn-lg" id="btnUpdateUser">Confirm Changes</button>
-    </div>
-</div>
-<script src="/javascripts/editprofile.js"></script>
 </body>
 </html>
