--- a/views/homepage.html
+++ b/views/homepage.html
@@ -49,13 +49,13 @@
                 </a>
             </li>
         </ul>
-        <ul class="nav navbar-nav navbar-center">
-            <li style="text-align: center; font-size: 36px; color: #c48843;"><%=username%></li>
-        </ul>
+<!--        <ul class="nav navbar-nav navbar-center">-->
+<!--            <li style="text-align: center; font-size: 36px; color: #c48843;"><%=username%></li>-->
+<!--        </ul>-->
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Account
+                    <%= username %>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/myprofile">My Profile</a>
@@ -71,11 +71,15 @@
 </nav>
 <!--<h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>-->
 <h1 style="text-align: center; text-size: 31px; border-color: Blue; display: none"><%=username%></h1>
-<div style = "display: block">
-    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="left" height="300" src="../Picture/multiplelanguages.jpeg" border="0" style="opacity: 0.75;"></a>
-    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="right" height="300" src="../Picture/multiplelanguages.jpeg" border="0" style="opacity: 0.75;"></a>
-</div>
-<h1 style="text-align: center; background-color: white; color: darkslateblue; height: 300px">LingoJive</h1>
+<!--<div style = "display: block">-->
+<!--    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="left" height="300" src="../Picture/multiplelanguages.jpeg" border="0" style="opacity: 0.75;"></a>-->
+<!--    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="right" height="300" src="../Picture/multiplelanguages.jpeg" border="0" style="opacity: 0.75;"></a>-->
+<!--</div>-->
+
+<h1 style="text-align: center; background-color: white; color: darkslateblue; height: 120px; padding: 20px;">
+        <img src="../Picture/LingoJiveLogo.png" class="img-fluid" width="200px" height="200px">
+<!--    LingoJive-->
+</h1>
 <!--<p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>-->
 <div style="border: 5px black">
     <h1 style="text-align: center; color: darkslateblue;"> A Language Exchange Application</h1>
