--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -54,7 +54,7 @@
                 <a class="nav-link" href="editprofile">Edit Profile<span class="sr-only"(current)></span></a>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Account
+                    <%= username %>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/myprofile">My Profile</a>
