profile css updates

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -28,3 +28,30 @@
 #btnUnblockUser{
     display: none;
 }
+
+.boxOne{
+    /*
+    border:5px solid black;
+    align: 'center';
+    float: left;
+    height: 150px;
+    width: 500px;
+    margin: 20px 100px;
+    */
+}
+.boxOne, .bio, .boxTwo{
+    border:3px solid black;
+    align: 'center';
+    text-align: center;
+    height: 150px;
+    width: 100%;
+    margin-top: 15px;
+}
+.boxTwo{
+    /*border:5px solid black;
+    align: 'center';
+    float: right;
+    height: 150px;
+    width: 500px;
+    margin: 20px 100px;*/
+}
