--- a/views/homepage.html
+++ b/views/homepage.html
@@ -85,24 +85,37 @@
     <h1 style="text-align: center; color: darkslateblue;"> A Language Exchange Application</h1>
 <h5 style="text-align: center">Here you can chat, communicate, and have a good time with your international friends for the first time</h5>
 </div>
-<div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: left; height: 120px;width: 500px;margin: 20px 100px;">
-    <h3 style="text-align: center; color: darkslateblue;">Connect Internationally</h3>
-    <h5 style="text-align: center">Meet new people from different countries through language!</h5></div>
-</div>
 
-<div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: right; height: 120px;width: 500px;margin: 20px 100px;">
-        <h3 style="text-align: center; color: darkslateblue;">Messaging, Audio, & Video Chat</h3>
-        <h5 style="text-align: center">Connect with other users with these methods!</h5>
+<!--- 4 boxes -->
+<div id="intro" class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <div class = "one" style="...;border-radius: 0px; border:5px solid black; align: 'center'; float: right; height: 105px;width: 500px;margin: 20px 0px 0px 0px ">
+                <h3 style="text-align: center; color: darkslateblue;">Connect Internationally</h3>
+                <h5 style="text-align: center">Meet new people from different countries through language!</h5>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class = "two"style="...;border-radius: 0px; border:5px solid black; align: 'center'; float: right; height: 105px;width: 500px;margin: 20px 0px 0px 0px ">
+                <h3 style="text-align: center; color: darkslateblue;">Message, Audio, & Video Chat</h3>
+                <h5 style="text-align: center">Connect with other users with these methods!</h5>
+            </div>
+        </div>
     </div>
-</div>
-<div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: left; height: 120px;width: 500px;margin: 20px 100px;">
-    <h3 style="text-align: center; color: darkslateblue;">Posting Feeds</h3>
-    <h5 style="text-align: center">Post a public comment or question to the community!</h5></div>
-</div>
-
-<div style="...;border-radius: 35px; border:5px solid black; align: 'center'; float: right; height: 120px;width: 500px;margin: 20px 100px;">
-    <h3 style="text-align: center; color: darkslateblue;">Timed Language Switches</h3>
-    <h5 style="text-align: center">Switch languages spoken with another user after a period of time!</h5>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class = "three"style="...;border-radius: 0px; border:5px solid black; align: 'center'; float: right; height: 105px;width: 500px;margin: 20px 0px 0px 0px ;">
+                <h3 style="text-align: center; color: darkslateblue;">Timed Language Switches</h3>
+                <h5 style="text-align: center">Switch languages spoken with another user after a period of time!</h5>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class = "four"style="...;border-radius: 0px; border:5px solid black; align: 'center'; float: right; height: 105px;width: 500px;margin: 20px 0px 0px 0px ">
+                <h3 style="text-align: center; color: darkslateblue;">Posting Feeds</h3>
+                <h5 style="text-align: center">Post a public comment or question to the community!</h5>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 </div>
