block working on chats.js now

--- a/views/chats.html
+++ b/views/chats.html
@@ -78,7 +78,7 @@
 <!--                <input class="btn btn-primary" type="submit" value="Submit">-->
 <!--            </form>-->
         </div>
-        <div class="col-6 chatcol2">
+        <div class="col-6 chatcol2" id="chatCol2">
             <div class="col-12 chatcol3" id="messageScroll">
                 <ul id="messages" class="listgroup"></ul>
             </div>
