added interface for profile search by languagee; needs JS still

--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -91,6 +91,37 @@
                placeholder="Username">
         <button class="btn btn-success" id="btnLoadUsersByUsername">Search</button>
     </div>
+    <p style="padding-top: 10px">Search by Language:</p>
+    <div class="input-group">
+        <label for="languageLearning">Practicing Languages</label>
+        <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true">
+
+            <select class="selectpicker" title="Select one" id="languageLearning">
+                <option>English</option>
+                <option>Spanish</option>
+                <option>French</option>
+                <option>German</option>
+                <option>Hindi</option>
+                <option>Italian</option>
+                <option>Dutch</option>
+                <option>Mandarin</option>
+            </select>
+        </div>
+        <label for="languageSpoken">Native Languages</label>
+        <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true">
+            <select class="selectpicker" title="Select one" id="languageSpoken">
+                <option>English</option>
+                <option>Spanish</option>
+                <option>French</option>
+                <option>German</option>
+                <option>Hindi</option>
+                <option>Italian</option>
+                <option>Dutch</option>
+                <option>Mandarin</option>
+            </select>
+        </div>
+        <button class="btn btn-success" id="btnLoadUsersByLanguage">Search</button>
+    </div>
 </div>
 <div style="padding-top: 10px" class="container">
     <div class="jumbotron" id="output">
