working on js for language search

--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -97,6 +97,7 @@
         <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true">
 
             <select class="selectpicker" title="Select one" id="languageLearning">
+                <option value="">Select One...</option>
                 <option>English</option>
                 <option>Spanish</option>
                 <option>French</option>
@@ -109,7 +110,8 @@
         </div>
         <label for="languageSpoken">Native Languages</label>
         <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true">
-            <select class="selectpicker" title="Select one" id="languageSpoken">
+            <select class="selectpicker" id="languageSpoken">
+                <option value="">Select One...</option>
                 <option>English</option>
                 <option>Spanish</option>
                 <option>French</option>
