language search working

--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -93,10 +93,9 @@
     </div>
     <p style="padding-top: 10px">Search by Language:</p>
     <div class="input-group">
-        <label for="languageLearning">Practicing Languages</label>
+        <label for="languageSpoken">Native Language</label>
         <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true">
-
-            <select class="selectpicker" title="Select one" id="languageLearning">
+            <select class="selectpicker" id="languageSpoken">
                 <option value="">Select One...</option>
                 <option>English</option>
                 <option>Spanish</option>
@@ -108,9 +107,13 @@
                 <option>Mandarin</option>
             </select>
         </div>
-        <label for="languageSpoken">Native Languages</label>
+    </div>
+    <div class="input-group">
+
+        <label for="languageLearning">Language being Learned</label>
         <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true">
-            <select class="selectpicker" id="languageSpoken">
+
+            <select class="selectpicker" title="Select one" id="languageLearning">
                 <option value="">Select One...</option>
                 <option>English</option>
                 <option>Spanish</option>
