--- a/views/chats.html
+++ b/views/chats.html
@@ -9,7 +9,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../stylesheets/chats.css">
-    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 <body>
 <script>
@@ -82,7 +81,7 @@
                     <label for="chatMsg" id="username" style="margin-top: 10px;"><%= username %></label>
                     <input type="text" id="chatMsg" class="form-control" autocomplete="off">
                     <div class="input-group-append">
-                        <button class="btn btn-primary" id="submitPic">Send</button>
+                        <button class="btn btn-send" id="submitPic">Send</button>
                     </div>
                 </div>
             </form>
