--- a/views/homepage.html
+++ b/views/homepage.html
@@ -12,7 +12,7 @@
     </script>
     <link rel="stylesheet" href="./stylesheets/homepage.css">
 </head>
-<body style="background-color: #c48843">
+<body style="background-color: #EE973A">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="nav-link" href="/">
         <div class="logo-image">
@@ -77,7 +77,7 @@
 <!--</div>-->
 
 <h1 style="text-align: center; background-color: white; color: darkslateblue; height: 120px; padding: 20px;">
-        <img src="../Picture/LingoJiveLogo.png" class="img-fluid" width="200px" height="200px">
+        <img src="../Picture/LingoJiveLogo.png" class="img-fluid" width="250px" height="250px">
 <!--    LingoJive-->
 </h1>
 <div id="head" class="container">
