--- a/public/stylesheets/messenger.css
+++ b/public/stylesheets/messenger.css
@@ -215,7 +215,7 @@ body {
 }
 
 #button_badge {
-    background-color: #EE973A;
+    background-color: #fa3e3e;
     border-radius: 2px;
     color: white;
 
