--- a/public/stylesheets/posts.css
+++ b/public/stylesheets/posts.css
@@ -44,7 +44,7 @@ nav{position: fixed;
     right: 0;}
 
 #button_badge {
-    background-color: #EE973A;
+    background-color: #fa3e3e;
     border-radius: 2px;
     color: white;
     display: none;
