--- a/public/stylesheets/searchprofile.css
+++ b/public/stylesheets/searchprofile.css
@@ -4,7 +4,7 @@
 }
 
 #button_badge {
-    background-color: #EE973A;
+    background-color: #fa3e3e;
     border-radius: 2px;
     color: white;
     display: none;
