--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1,5 +1,5 @@
 #button_badge {
-    background-color: #EE973A;
+    background-color: #fa3e3e;
     border-radius: 2px;
     color: white;
     display: none;
