--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -14,7 +14,7 @@
 }
 
 #button_badge {
-    background-color: #EE973A;
+    background-color: #fa3e3e;
     border-radius: 2px;
     color: white;
 
