--- a/views/login.html
+++ b/views/login.html
@@ -10,7 +10,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-<h1 style="text-align: center">LingoJive Log-in</h1>
+<img src="../Picture/LingoJiveLogo.png" class="img-fluid img-center" width="250px" height="250px">
+<h1 style="text-align: center; color: #4B4B69">Log-in</h1>
 
 <form action="/authenticate" method="post">
 <div class="container">
@@ -28,9 +29,9 @@
 
     </div>
     <div class="text-center">
-        <button type="submit" class="btn btn-primary btn-lg" id="btnLogin">Log in</button>
+        <button type="submit" class="btn btn-login btn-lg" id="btnLogin">Log in</button>
         <br>
-        <a href="/createprofile">Create an account</a>
+        <a href="/createprofile" style="color: #4B4B69">Create an account</a>
     </div>
 </div>
 </form>
