test for auto build

--- a/views/login.html
+++ b/views/login.html
@@ -31,7 +31,7 @@
     <div class="text-center">
         <button type="submit" class="btn btn-login btn-lg" id="btnLogin">Log in</button>
         <br>
-        <a href="/createprofile" style="color: #4B4B69">Create an account</a>
+        <a href="/createprofile" style="color: #4B4B69">Create an Account</a>
     </div>
 </div>
 </form>
